# aggre

./: .agent-harness.yml  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .mcp.json  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  DECISIONS.md  Dockerfile  Makefile  PLAN.md  README.md  SUGGESTIONS.md  TODO.md  alembic.ini  config.yaml  dagster.prod.yaml  dagster.yaml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.remote.yml  docker-compose.test.yml  docker-compose.yml  garage.local.toml  pyproject.toml  tools.yaml  workspace.yaml
.claude/: settings.json  statusline.sh
.github/workflows/: ci.yml  docker-publish.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/verification/: ContentPipeline.tla  EnrichmentPipeline_liveness.cfg  EnrichmentPipeline_safe.cfg  EnrichmentRetry.cfg  NullCheckQueue.tla  README.md  run.sh
alembic/: env.py
alembic/versions/: 001_initial.py  001_initial_postgres.py  001_initial_schema.py  002_rename_bronze_to_discussions.py  002_simplify_transcription_status.py  002_stage_tracking.py  003_add_raw_html_column.py  003_drop_pending_from_actionable_index.py  004_rename_content_source_to_webpage.py  005_add_original_url_to_silver_content.py  006_rename_observations_to_discussions.py  007_rename_enrich_to_discussion_search.py  008_reset_stuck_extractions.py  009_add_transcribed_by.py  010_drop_stage_tracking.py  011_drop_discussions_searched_at.py  0debc4edd9ea_add_url_index.py  1d685801ac43_rename_bronze_silver.py
docs/: TODO.md  architecture.md  medallion-guidelines.md  python-guidelines.md  semantic-model.md  todo.md  vision.md
docs/archive/: verification-readme.md
docs/archive/ideas/: architecture.md
docs/archive/plans/: 2026-02-20-run-once-plan.md  2026-03-01-new-collectors-continuation.md  hatchet-migration.md
docs/archive/researches/: formal-verification-ecosystem.md  formal-verification-poc-results.md  formal-verification-tool-comparison.md  postgresql-as-queue.md  stage-tracking-framework.md
docs/decisions/: 001-medallion-architecture.md  002-null-check-queue-pattern.md  003-column-ownership.md  004-hatchet-over-dagster.md  005-per-item-event-driven.md  006-proxy-api.md  007-completeness-invariant.md  008-pydantic-basemodel-over-any.md
docs/guidelines/: build-caching.md  component-contracts.md  config-files.md  container-logs.md  deploy-from-scratch.md  deployment.md  documentation.md  formal-verification.md  hatchet-operations.md  integration-testing.md  medallion.md  model-selection.md  non-http.md  orchestration.md  production-lessons.md  python.md  reference-pipeline.yml  semantic-model.md  tailscale.md  testing.md  traefik-ts-compose.yml
docs/ideas/: SOURCING.md  architecture.md  input.md
docs/plans/: 2026-02-20-run-once-design.md  event-driven-redesign.md
docs/researches/: README.md  claude-code-digest-experiment.md  formal-verification-for-concurrency.md  formal-verification-poc-results.md  formal-verification-tool-comparison.md  mcp-code-tools-comparison.md  modern-shell-and-cli-tools.md
docs/superpowers/plans/: 2026-03-15-drop-stage-tracking.md  2026-03-16-event-dedup.md  2026-03-16-github-trending-collector.md  2026-03-19-collection-widening-lint-infra.md  2026-03-19-modal-transcription.md  2026-03-23-workflow-redesign-rich-events.md  2026-03-29-jina-reader-fallback.md
docs/superpowers/specs/: 2026-03-14-ytdlp-subprocess-migration-design.md  (+13 more)
grafana/: datasources-remote.yml
grafana/dashboards/: pipeline-overview.json
infrastructure/aggre-infra/: .env.example  README.md  docker-compose.yml  garage.toml
infrastructure/browserless-lb/: docker-compose.yml
infrastructure/macbook-browserless/: docker-compose.yml
infrastructure/zephyrus-browserless/: docker-compose.yml
scripts/: autonomy-full-v2.sh  autonomy-full.sh  autonomy-v2.sh  autonomy.sh  backfill_transcription.py  benchmark_whisper.py  cancel_redundant_webpage_tasks.py  check-compose.py  check-file-length.py  check-json.py  dokctl.py  test_modal_transcription.py
scripts/autonomy/: Dockerfile  Dockerfile-v2  entrypoint-v2.sh  entrypoint.sh  format-stream.py  stop-hook.sh
src/aggre/: __init__.py  bronze.py  bronze_http.py  cli.py  config.py  content_downloader.py  content_extractor.py  content_fetcher.py  db.py  enrichment.py  http.py  logging.py  models.py  settings.py  statuses.py  transcriber.py  urls.py  worker.py
src/aggre/collectors/: rss.py  (+9 more)
tests/: conftest.py  factories.py  helpers.py  test_acceptance_cli.py  test_acceptance_content_linking.py  test_acceptance_pipeline.py  test_bronze.py  test_bronze_http.py  test_config.py  test_content.py  test_discussion_search.py  test_enrichment.py  test_hackernews.py  test_huggingface.py  test_invariants.py  test_lobsters.py  test_orchestration.py  test_reddit.py  test_reprocess.py  test_rss.py  test_run_once.py  test_s3_integration.py  test_sensors.py  test_settings.py  test_telegram.py  test_transcriber.py  test_transcription.py  test_urls.py  test_urls_hypothesis.py  test_webpage.py  test_youtube.py
tests/collectors/: test_arxiv.py  test_contract_hackernews.py  test_contract_lobsters.py  test_contract_reddit.py  test_github_trending.py  test_github_trending_parser.py  test_hackernews.py  test_huggingface.py  test_lesswrong.py  test_lobsters.py  test_reddit.py  test_rss.py  test_telegram.py  test_youtube.py
tests/factories/: __init__.py  arxiv.py  config.py  db.py  github_trending.py  hackernews.py  huggingface.py  lesswrong.py  lobsters.py  reddit.py  rss.py  telegram.py  youtube.py
tests/tracking/: test_invariants.py  test_ops.py
tests/utils/: test_bronze.py  test_bronze_http.py  test_proxy_api.py  test_whisper_client.py  test_ytdlp.py
tests/workflows/: test_collection.py  test_comments.py  test_discussion_search.py  test_models.py  test_transcription.py  test_webpage.py  test_webpage_extract.py
verification/: ConcurrentJobs.tla  ConcurrentJobs_safe.cfg  ConcurrentJobs_unsafe.cfg  ContentPipeline.cfg  EnrichmentPipeline.cfg  EnrichmentPipeline.tla  EnrichmentRetry.tla
(+107 files in other folders)
