[project]
name = "aggre"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "structlog>=23.0.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
    "feedparser>=6.0",
    "httpx[socks]>=0.28",
    "yt-dlp>=2024.0",
    "faster-whisper>=1.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.15",
    "trafilatura>=2.0",
    "psycopg2-binary>=2.9",
    "telethon>=1.37",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-recording>=0.13.4",
    "ruff>=0.14.0",
    "ty>=0.0.13",
]

[project.scripts]
aggre = "aggre.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aggre"]

[tool.uv]
prerelease = "allow"

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ty.environment]
python-version = "3.12"
python = "./.venv"

[tool.ty.src]
include = ["tests"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
missing-argument = "error"
unsupported-operator = "error"
division-by-zero = "error"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
pythonpath = "."
markers = [
    "contract: marks tests as contract tests (external API verification)",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
