[project]
name = "aggre"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
    "feedparser>=6.0",
    "httpx[socks]>=0.28",
    "yt-dlp>=2024.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.15",
    "trafilatura>=2.0",
    "psycopg[binary]>=3.1",
    "telethon>=1.37",
    "hatchet-sdk>=1.4",
    "boto3>=1.35",
    "curl-cffi>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-recording>=0.13.4",
    "ruff>=0.14.0",
    "ty>=0.0.13",
    "respx>=0.22",
    "polyfactory>=2.18",
    "hypothesis>=6.120",
    "moto[s3]>=5.0",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
    "pytest-env>=1.0",
]

[project.scripts]
aggre = "aggre.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aggre"]

[tool.uv]
prerelease = "allow"

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ty.environment]
python-version = "3.12"
python = "./.venv"

[tool.ty.src]
include = ["tests"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
missing-argument = "error"
unsupported-operator = "error"
division-by-zero = "error"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "AGGRE_BRONZE_BACKEND=filesystem",
    "AGGRE_BRONZE_S3_ENDPOINT=",
    "AGGRE_DATABASE_URL=postgresql+psycopg://aggre:aggre@localhost:5433/aggre_test",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov --cov-report=term:skip-covered --cov-report=xml --cov-fail-under=95"
pythonpath = "."
markers = [
    "contract: marks tests as contract tests (external API verification)",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "acceptance: marks tests as acceptance tests (end-to-end workflows)",
]

[tool.coverage.run]
source = ["src/aggre"]
branch = true
omit = ["src/aggre/cli.py"]

[tool.coverage.report]
show_missing = false
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "\\.\\.\\.",       # Protocol method bodies (ellipsis)
]
